[metadata]
name = disl
version = 0.0.4
author = Kent Tong
author_email = kent.tong.mo@gmail.com
description = A super lightweight (only 35 lines) dependency injection (ioc) support for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freemant2000/dilite
project_urls =
    Bug Tracker = https://github.com/freemant2000/dilite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir =
    = src
modules = [disl]
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src
